--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -15,8 +15,11 @@
     
     <body>
         <h1> WELCOME! </h1>
-        
+        <br>
         <p1> Have an animal you don’t like? Too much peace in your humble world? Want to destroy some furry creatures? Well, here’s to your wildest fantasies coming true! ThingsOnFire is a collectible website where users can answer trivia questions to collect different items. Answer the question correctly, and you get the cute little furry animal; incorrectly, and you get to see the cursed animal burned alive. Compete against other users in the leaderboard while flexing your random collection of knowledge!</p1>
+        <br><br>
+        <button type="button" class="btn btn-secondary">Login</button>
+        <button type="button" class="btn btn-secondary">Trivia</button>
         
     </body>
     
