--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title> Login </title>
+        
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        
+        <link rel="stylesheet"
+              type="text/css"
+              href="{{ url_for('static', filename='css/style.css') }}">
+        
     </head>
     <body>
           <form action="/auth", method="POST">
@@ -8,8 +16,7 @@
               <input class="credential-input" type="password" name="password" placeholder="Password">
               <input id="credential-submit" type="submit" value="login" />
           </form>
-          <form action="/register", method="GET">
-            <input type="submit" value="register">
-          </form>
+          <br>
+        Don't have an account, yet? Please, <a href= "/register"> register </a>!
     </body>
 </html>
