--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title> Register </title>
+        
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        
+        <link rel="stylesheet"
+              type="text/css"
+              href="{{ url_for('static', filename='css/style.css') }}">
+        
     </head>
     <body>
           <form action="/register", method="POST">
               <input class="credential-input" type="text" name="username" placeholder="Username">
               <input class="credential-input" type="password" name="password" placeholder="Password">
-              <input id="credential-submit" type="submit" value="login" />
+              <input id="credential-submit" type="submit" value="Register" />
           </form>
     </body>
 </html>
