--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,11 +9,34 @@
         
         <link rel="stylesheet"
               type="text/css"
-              href="{{ url_for('static', filename='css/style.css') }}">
+              href="../static/css/style.css">
         
     </head>
     
     <body>
+    	<nav class="navbar navbar-expand fixed-top navbar-light bg-light">
+	<div class="container-fluid">
+	    <a class="navbar-brand" href="home.html">ThingsOnFire</a>
+	    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	      <ul class="navbar-nav">
+		<li class="nav-item">
+		  <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link active" href="#">Trivia</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link active" href="#">Profile</a>
+		</li>
+	        <li class="nav-item">
+		  <a class="nav-link active" aria-current="page" href="login.html">Login</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link active" aria-current="page" href="register.html">Signup</a>
+		</li>
+	    </div>
+	</div>
+	</nav>
         <h1> WELCOME! </h1>
         <br>
         <p1> Have an animal you don’t like? Too much peace in your humble world? Want to destroy some furry creatures? Well, here’s to your wildest fantasies coming true! ThingsOnFire is a collectible website where users can answer trivia questions to collect different items. Answer the question correctly, and you get the cute little furry animal; incorrectly, and you get to see the cursed animal burned alive. Compete against other users in the leaderboard while flexing your random collection of knowledge!</p1>
