--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -7,10 +7,33 @@
         
         <link rel="stylesheet"
               type="text/css"
-              href="{{ url_for('static', filename='css/style.css') }}">
+              href="../static/css/style.css">
         
     </head>
     <body>
+    	<nav class="navbar navbar-expand fixed-top navbar-light bg-light">
+	<div class="container-fluid">
+	    <a class="navbar-brand" href="home.html">ThingsOnFire</a>
+	    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	      <ul class="navbar-nav">
+		<li class="nav-item">
+		  <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link active" href="#">Trivia</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link active" href="#">Profile</a>
+		</li>
+	        <li class="nav-item">
+		  <a class="nav-link active" aria-current="page" href="login.html">Login</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link active" aria-current="page" href="register.html">Signup</a>
+		</li>
+	    </div>
+	</div>
+	</nav>
           <form action="/register", method="POST">
               <input class="credential-input" type="text" name="username" placeholder="Username">
               <input class="credential-input" type="password" name="password" placeholder="Password">
