--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 
 <html>
-    
+
     <head>
         <title> ThingsOnFire </title>
-        
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        
+
         <link rel="stylesheet"
               type="text/css"
               href="../static/css/style.css">
-        
+
     </head>
-    
+
     <body>
     	<nav class="navbar navbar-expand fixed-top navbar-light bg-light">
 	<div class="container-fluid">
-	    <a class="navbar-brand" href="home.html">ThingsOnFire</a>
+	    <a class="navbar-brand" href="home">ThingsOnFire</a>
 	    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	      <ul class="navbar-nav">
 		<li class="nav-item">
-		  <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+		  <a class="nav-link active" aria-current="page" href="home">Home</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link active" href="#">Trivia</a>
@@ -29,10 +29,10 @@
 		  <a class="nav-link active" href="#">Profile</a>
 		</li>
 	        <li class="nav-item">
-		  <a class="nav-link active" aria-current="page" href="login.html">Login</a>
+		  <a class="nav-link active" aria-current="page" href="login">Login</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link active" aria-current="page" href="register.html">Signup</a>
+		  <a class="nav-link active" aria-current="page" href="register">Signup</a>
 		</li>
 	    </div>
 	</div>
@@ -44,7 +44,7 @@
         {{ loginedIn }}
         <a role="button" href= "/login"class="btn btn-secondary">Login</a>
         <a role="button" href="/trivia" class="btn btn-secondary">Trivia</a>
-        
+
     </body>
-    
+
 </html>
