--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <title> Login </title>
-        
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        
+
         <link rel="stylesheet"
               type="text/css"
               href="../static/css/style.css">
-        
+
     </head>
     <body>
     	<nav class="navbar navbar-expand fixed-top navbar-light bg-light">
@@ -17,7 +17,7 @@
 	    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	      <ul class="navbar-nav">
 		<li class="nav-item">
-		  <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+		  <a class="nav-link active" aria-current="page" href="home">Home</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link active" href="#">Trivia</a>
@@ -26,21 +26,21 @@
 		  <a class="nav-link active" href="#">Profile</a>
 		</li>
 	        <li class="nav-item">
-		  <a class="nav-link active" aria-current="page" href="login.html">Login</a>
+		  <a class="nav-link active" aria-current="page" href="login">Login</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link active" aria-current="page" href="register.html">Signup</a>
+		  <a class="nav-link active" aria-current="page" href="register">Signup</a>
 		</li>
 	    </div>
 	</div>
 	</nav>
-    
+
           <form action="/auth", method="POST">
               <input class="credential-input" type="text" name="username" placeholder="Username">
               <input class="credential-input" type="password" name="password" placeholder="Password">
               <input id="credential-submit" type="submit" value="login">
           </form>
           <br>
-        Don't have an account, yet? Please, <a href= "register.html"> register </a>!
+        Don't have an account, yet? Please, <a href= "register"> register </a>!
     </body>
 </html>
