--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -13,11 +13,11 @@
     <body>
     	<nav class="navbar navbar-expand fixed-top navbar-light bg-light">
 	<div class="container-fluid">
-	    <a class="navbar-brand" href="home">ThingsOnFire</a>
+	    <a class="navbar-brand" href="/">ThingsOnFire</a>
 	    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	      <ul class="navbar-nav">
 		<li class="nav-item">
-		  <a class="nav-link active" aria-current="page" href="home">Home</a>
+		  <a class="nav-link active" aria-current="page" href="/">Home</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link active" href="#">Trivia</a>
