--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -11,39 +11,45 @@
 
     </head>
     <body>
-    	<nav class="navbar navbar-expand fixed-top navbar-light bg-light">
-	<div class="container-fluid">
-	    <a class="navbar-brand" href="/">ThingsOnFire</a>
-	    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-	      <ul class="navbar-nav">
-		<li class="nav-item">
-		  <a class="nav-link active" aria-current="page" href="/">Home</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link active" href="#">Trivia</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link active" href="#">Profile</a>
-		</li>
-	        <li class="nav-item">
-		  <a class="nav-link active" aria-current="page" href="login">Login</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link active" aria-current="page" href="register">Signup</a>
-		</li>
-	    </div>
-	</div>
-	</nav>
+      <nav class="navbar navbar-expand fixed-top navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">ThingsOnFire</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Trivia</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Profile</a>
+                </li>
+                {% if session %}
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Logout</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="login.html">Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="register.html">Signup</a>
+                </li>
+                {% endif %}
+            </div>
+        </div>
+      </nav>
 
           <form action="/auth", method="POST">
-              <input class="credential-input" type="text" name="username" placeholder="Username">
-              <input class="credential-input" type="password" name="password" placeholder="Password">
+              <input class="credential-input" type="text" name="username" placeholder="Username"><br>
+              <input class="credential-input" type="password" name="password" placeholder="Password"><br>
               <input id="credential-submit" type="submit" value="login">
           </form>
-            
+
             {{ error }}
           <br>
-            
+
         Don't have an account, yet? Please, <a href= "register"> register </a>!
     </body>
 </html>
