--- a/app/templates/trivia.html
+++ b/app/templates/trivia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--
+
 <html lang="en">
     <head>
         <title> Trivia </title>
@@ -9,51 +9,43 @@
         <link rel="stylesheet"
               type="text/css"
               href="../static/css/style.css">
-
     </head>
+
     <body>
-    	<nav class="navbar navbar-expand fixed-top navbar-light bg-light">
-	<div class="container-fluid">
-	    <a class="navbar-brand" href="home.html">ThingsOnFire</a>
-	    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-	      <ul class="navbar-nav">
-		<li class="nav-item">
-		  <a class="nav-link active" aria-current="page" href="home">Home</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link active" href="#">Trivia</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link active" href="#">Profile</a>
-		</li>
-	        <li class="nav-item">
-		  <a class="nav-link active" aria-current="page" href="login">Login</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link active" aria-current="page" href="register">Signup</a>
-		</li>
-	    </div>
-	</div>
-	</nav>
+      <nav class="navbar navbar-expand fixed-top navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">ThingsOnFire</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/trivia">Trivia</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
+                </li>
+                {% if session %}
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/register">Signup</a>
+                </li>
+                {% endif %}
+            </div>
+        </div>
+      </nav>
 
     {{question}}
     {{correct}}
     {{incorrect}}
 
     </body>
-  -->
-  
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>{{question}}</h1>
-    {% for answer in wrong %}
-    <form action="/trivia" method="POST">
-      session['answer'] = answer
-      <input type="submit" value="{{answer}}">
-    </form>
-  </body>
-</html>
+
+  </html>
