--- a/app/templates/trivia.html
+++ b/app/templates/trivia.html
@@ -43,8 +43,12 @@
       </nav>
 
     {{question}}
-    {{correct}}
-    {{incorrect}}
+    {% for i in incorrect %}
+    <form action="/trivia" method="POST">
+      <input value="{{i}}" type="hidden" name="answer">
+      <input type="submit" value="{{i}}">
+      </form>
+    {% endfor %}
 
     </body>
 
