added dog api getting

--- a/app/templates/collectibles.html
+++ b/app/templates/collectibles.html
@@ -43,7 +43,7 @@
       </nav>
 
         Collectible Gained!
-        <img src="{{ pic }}">
+        <img src="{{ picture }}">
         {{description}}
 
     </body>
