--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,12 @@
+<!-- parent html template that others will extend off of --> 
+
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
     <head>
-        <title> Gain a Collectible! </title>
+        <title> {% block title %} {% endblock %} </title>
+        
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -9,8 +14,11 @@
         <link rel="stylesheet"
               type="text/css"
               href="../static/css/style.css">
+        
+        {% block css %} {% endblock %}
 
     </head>
+
     <body>
       <nav class="navbar navbar-expand fixed-top navbar-light bg-light">
         <div class="container-fluid">
@@ -41,14 +49,9 @@
             </div>
         </div>
       </nav>
-
-        Collectible Gained!
-        {% if loggedin == False %}
-          <p style="color: red">**To keep this collectible, please <a href="/login"> log in!</a> </p>
-        {% endif %}   
           
-        <img src="{{ picture }}">
-        {{description}}
+       {% block body %} {% endblock %}
 
     </body>
+
 </html>
