--- a/app/templates/burn.html
+++ b/app/templates/burn.html
@@ -13,5 +13,8 @@
 <p>For your idiocy, your collectible burns in fire!</p>
 
 <img src="{{ picture }}">
+<br>
 {{description}}
+<br><br>
+<a role="button" href= "/trivia"class="btn btn-secondary">More Trivia</a>
 {% endblock %}
