--- a/app/templates/trivia.html
+++ b/app/templates/trivia.html
@@ -26,7 +26,7 @@
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
                 </li>
-                {% if session %}
+                {% if session['username'] %}
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
                 </li>
