--- a/app/templates/collectibles.html
+++ b/app/templates/collectibles.html
@@ -1,57 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title> Gain a Collectible! </title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+{% extends "base.html" %}
+{% block title %} Collectible Gained! {% endblock %}
 
-        <link rel="stylesheet"
-              type="text/css"
-              href="../static/css/style.css">
+{% block css %}
+<style>
+  body{
+    background-color: seagreen;
+  }
+</style>
+{% endblock %}
 
-    </head>
-    <body>
-      <nav class="navbar navbar-expand fixed-top navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">ThingsOnFire</a>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/trivia">Trivia</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
-                </li>
-                {% if session %}
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
-                </li>
-                {% else %}
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/login">Login</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/register">Signup</a>
-                </li>
-                {% endif %}
-            </div>
-        </div>
-      </nav>
-          Collectible Gained!
-          <br>
-          {% if loggedin == False %}
-            <p style="color: red">**To keep this collectible, please <a href="/login"> log in!</a> </p>
-          {% endif %}   
-          
-          <img src="{{ picture }}">
-          <br>
-          {{description}}
-          <br><br>
-          <a role="button" href= "/trivia"class="btn btn-secondary">More Trivia</a>
+{% block body %}
+  Collectible Gained!
+  <br>
+  {% if loggedin == False %}
+    <p style="color: red">**To keep this collectible, please <a href="/login"> log in!</a> </p>
+  {% endif %}
 
-    </body>
-</html>
+  <img src="{{ picture }}">
+  <br>
+  {{description}}
+  <br><br>
+  <a role="button" href= "/trivia"class="btn btn-secondary">More Trivia</a>
+{% endblock %}
