--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,56 +1,18 @@
-  <!DOCTYPE html>
+{% extends "base.html" %}
+{% block title %} Home {% endblock %}
 
-<html>
+{% block css %}
+<style>
+    /* insert css specific to individual page */
+</style>
+{% endblock %}
 
-    <head>
-        <title> ThingsOnFire </title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+{% block body %}
+  <h1> WELCOME! </h1>
+  <br>
+  <p1> Have an animal you don’t like? Too much peace in your humble world? Want to destroy some furry creatures? Well, here’s to your wildest fantasies coming true! ThingsOnFire is a collectible website where users can answer trivia questions to collect different items. Answer the question correctly, and you get the cute little furry animal; incorrectly, and you get to see the cursed animal burned alive. Compete against other users in the leaderboard while flexing your random collection of knowledge!</p1>
+  <br><br>
 
-        <link rel="stylesheet"
-              type="text/css"
-              href="../static/css/style.css">
+  <a role="button" href="/trivia" class="btn btn-secondary">Trivia</a>
 
-    </head>
-
-    <body>
-      <nav class="navbar navbar-expand fixed-top navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">ThingsOnFire</a>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/trivia">Trivia</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
-                </li>
-                {% if session %}
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
-                </li>
-                {% else %}
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/login">Login</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/register">Signup</a>
-                </li>
-                {% endif %}
-            </div>
-        </div>
-      </nav>
-        <h1> WELCOME! </h1>
-        <br>
-        <p1> Have an animal you don’t like? Too much peace in your humble world? Want to destroy some furry creatures? Well, here’s to your wildest fantasies coming true! ThingsOnFire is a collectible website where users can answer trivia questions to collect different items. Answer the question correctly, and you get the cute little furry animal; incorrectly, and you get to see the cursed animal burned alive. Compete against other users in the leaderboard while flexing your random collection of knowledge!</p1>
-        <br><br>
-        
-        <a role="button" href="/trivia" class="btn btn-secondary">Trivia</a>
-
-    </body>
-
-</html>
+{% endblock %}
