--- a/app/templates/trivia.html
+++ b/app/templates/trivia.html
@@ -1,55 +1,23 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
+{% block title %} Trivia {% endblock %}
 
-<html lang="en">
-    <head>
-        <title> Trivia </title>
+{% block css %}
+<style>
+    /* insert css specific to individual page */
+</style>
+{% endblock %}
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+{% block body %}
+  {{question}} <!-- displays questions -->
 
-        <link rel="stylesheet"
-              type="text/css"
-              href="../static/css/style.css">
-    </head>
-
-    <body>
-      <nav class="navbar navbar-expand fixed-top navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">ThingsOnFire</a>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/trivia">Trivia</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
-                </li>
-                {% if session['username'] %}
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
-                </li>
-                {% else %}
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/login">Login</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/register">Signup</a>
-                </li>
-                {% endif %}
-            </div>
-        </div>
-      </nav>
-
-    {{question}}
-    {% for i in choices %}
+  {% for i in choices %} <!-- displays choices -->
     <form action="/trivia" method="POST">
       <input value="{{i}}" type="hidden" name="answer">
       <input type="submit" value="{{i}}">
-      </form>
-    {% endfor %}
+    </form>
+  {% endfor %}
 
-    </body>
+<!-- displays hint -->
+  {% if hint >= 1%}
 
-  </html>
+{% endblock %}
