--- a/app/templates/collectibles.html
+++ b/app/templates/collectibles.html
@@ -15,10 +15,11 @@
   {% if loggedin == False %}
     <p style="color: red">**To keep this collectible, please <a href="/login"> log in!</a> </p>
   {% endif %}
-
-  <img src="{{ picture }}">
-  <br>
-  {{description}}
-  <br><br>
-  <a role="button" href= "/trivia"class="btn btn-secondary">More Trivia</a>
+  <div class="container-fluid" style="height:500px">
+    <img src="{{ picture }}" class="img-fluid mh-100">
+    <br>
+    {{description}}
+    <br><br>
+    <a role="button" href= "/trivia"class="btn btn-secondary">More Trivia</a>
+  </div>
 {% endblock %}
