--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,9 +1,9 @@
 body{
-    background-color: #62929E;   
+    background-color: #8DB0B9;   
     text-align: center;
     margin: 20px;
     font-family: Georgia;
-    padding-top:50px;
+    padding-top:75px;
 }
 
 h1 {
