--- a/app/templates/burn.html
+++ b/app/templates/burn.html
@@ -4,7 +4,7 @@
 {% block css %}
 <style>
     body{
-        background-color: red;
+        background-color: #CF1259;
     }
 </style>
 {% endblock %}
