--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -3,7 +3,9 @@
 
 {% block css %}
 <style>
-    /* insert css specific to individual page */
+    img{
+	padding-top:3px;
+    }
 </style>
 {% endblock %}
 
