--- a/app/templates/triviasa.html
+++ b/app/templates/triviasa.html
@@ -14,5 +14,15 @@
       <input name="answer">
       <input type="submit" value="submit">
     </form>
+<br>
+{% if logged %}
+Hints You Have: {{hint}} 
+{% if hint > 0 %}
+<form action="/hintSA" method="POST">
+    <input type="hidden" name="Question" value="{{question}}">
+    <input type="submit" name="Hint Button" value="Use Hint">
+</form>
+{% endif %}
+{% endif %} 
 
 {% endblock %}
