--- a/app/templates/triviasa.html
+++ b/app/templates/triviasa.html
@@ -11,8 +11,12 @@
   {{question}} <!-- displays questions -->
   <br><br>
     <form action="/trivia" method="POST">
-      <input name="answer">
-      <input type="submit" value="submit">
+        {% if hinted %}
+        <input name="answer" value="{{ clue }}">
+        {% else %}
+        <input name="answer">
+        {% endif %}
+        <input type="submit" value="submit">
     </form>
 <br>
 {% if logged %}
