--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,4 @@
-<!-- parent html template that others will extend off of --> 
+<!-- parent html template that others will extend off of -->
 
 <!DOCTYPE html>
 
@@ -6,7 +6,7 @@
 
     <head>
         <title> {% block title %} {% endblock %} </title>
-        
+
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -14,7 +14,7 @@
         <link rel="stylesheet"
               type="text/css"
               href="../static/css/style.css">
-        
+
         {% block css %} {% endblock %}
 
     </head>
@@ -43,13 +43,13 @@
                   <a class="nav-link active" aria-current="page" href="/login">Login</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/register">Signup</a>
+                  <a class="nav-link active" aria-current="page" href="/register">Register</a>
                 </li>
                 {% endif %}
             </div>
         </div>
       </nav>
-          
+
        {% block body %} {% endblock %}
 
     </body>
