--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,15 +3,30 @@
 
 {% block css %}
 <style>
-    /* insert css specific to individual page */
+    .mb-3{
+      width:300px;
+    }
 </style>
 {% endblock %}
 
 {% block body %}
+    <h1>Login</h1>
     <form action="/auth", method="POST">
-        <input class="credential-input" type="text" name="username" placeholder="Username"><br>
-        <input class="credential-input" type="password" name="password" placeholder="Password"><br>
-        <input id="credential-submit" type="submit" value="login">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="mb-3">
+            <label for="username" class="form-label">Username</label>
+            <input class="credential-input form-control" type="text" name="username">
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input class="credential-input form-control" type="password" name="password">
+          </div>
+        </div>
+        <input id="credential-submit" type="submit" class="btn btn-secondary" value="Login">
+      </div>
     </form>
 
     {{ error }}
