--- a/app/templates/triviasa.html
+++ b/app/templates/triviasa.html
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block body %}
+<h1>Trivia</h1>
   {{question|safe}} <!-- displays questions -->
   <br><br>
     <form action="/trivia" method="POST">
@@ -16,7 +17,7 @@
         {% else %}
         <input name="answer">
         {% endif %}
-        <input type="submit" value="submit">
+        <input class="btn btn-secondary" type="submit" value="Submit">
     </form>
 <br>
 {% if logged %}
@@ -24,7 +25,7 @@ Hints You Have: {{hint}}
 {% if hint > 0 %}
 <form action="/hintSA" method="POST">
     <input type="hidden" name="Question" value="{{question}}">
-    <input type="submit" name="Hint Button" value="Use Hint">
+    <input class="btn btn-secondary" type="submit" name="Hint Button" value="Use Hint">
 </form>
 {% endif %}
 {% endif %}
