--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -20,7 +20,7 @@
 <h2>Fire Extinguishers You Have: {{ numOfFireExtinguishers}} </h2>
 <br>
 <h2>Achievements You Have: {{ numOfAchievements }} </h2>
-<a class="btn btn-secondary" href="/">See All Achievements</a>
+<a class="btn btn-secondary" href="/achievements">See All Achievements</a>
 <br>
 <h2>Special Collectibles You Have: {{ numOfSpecialCollectibles }} </h2>
 <a class="btn btn-secondary" href="/">See Your Specials</a>
