counters + gain items

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -15,9 +15,15 @@
 <h2>Collectibles You Have: {{ numOfCollectibles}} </h2>
 <a class="btn btn-secondary" href="/collection">See Your Collection</a>
 <br><br>
+<h2>Total Questions Right: {{ numOfRightQus }}</h2>
+<br>
+<h2>Total Questions Wrong: {{ numOfWrongQus }}</h2>
+<br>
 <h2>Hints You Have: {{ numOfHints }} </h2>
+<p> {{ goalRight }} / 10 right questions to get Hint </p>
 <br>
 <h2>Fire Extinguishers You Have: {{ numOfFireExtinguishers}} </h2>
+<p> {{ goalWrong }} / 10 wrong questions to get Hint </p>
 <br>
 <h2>Achievements You Have: {{ numOfAchievements }} </h2>
 <a class="btn btn-secondary" href="/achievements">See All Achievements</a>
