new limitation on first char of username

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -21,7 +21,7 @@
             <label for="username" class="form-label">Username</label>
             <input class="credential-input form-control" type="text" name="username" aria-describedby="usernameHelp">
             <div id="usernameHelp" class="form-text">
-              Username should be alphanumeric
+              Username should be alphanumeric and cannot start with a number
             </div>
           </div>
         </div>
