--- a/app/templates/burn.html
+++ b/app/templates/burn.html
@@ -26,7 +26,7 @@
 {% endblock %}
 
 {% block body %}
-<p>The correct answer was {{session['correct_answer']}}</p>
+<p>The correct answer was {{correct}}</p>
 <p>For your idiocy, your collectible burns in fire!</p>
 
 <div class="card">
