made it so hint removes a random choice for MCQ

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,7 +35,7 @@
                   <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/leaderboard">leaderboard</a>
+                  <a class="nav-link active" aria-current="page" href="/leaderboard">Leaderboard</a>
                 </li>
                 {% if session['username'] %}
                 <li class="nav-item">
