--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -28,8 +28,8 @@
         <input id="credential-submit" type="submit" class="btn btn-secondary" value="Login">
       </div>
     </form>
-
-    {{ error }}
+<br>
+<p style="color: red">{{ error }}</p>
     <br>
 
     Don't have an account, yet? Please, <a href= "register"> register </a>!
