--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -34,7 +34,7 @@
 <br><br>
 
 {% else %}
-<p> To start obtaining collectibles for your profile, please login or signup.</p>
+<p> To start obtaining collectibles for your profile, please <a href="/login">login</a> or <a href="/register">signup</a>.</p>
 {% endif %}
 
 <!--
