--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -40,6 +40,6 @@
       <input id="credential-submit" type="submit" class="btn btn-secondary" value="Register">
       </div>
     </form>
-
-    {{error}}
+<br>
+<p style="color: red">{{error}}</p>
 {% endblock %}
